--- a/index.html
+++ b/index.html
@@ -15,12 +15,31 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-light bg-light p-2">
-        <form class="form-inline">
-            <a href="https://github.com/KatrinaYates/form" target="_blank" rel="noopener noreferrer"><button class="btn btn-light btn-outline-dark" type="button">My Code</button></a>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2FKatrinaYates%2Fform" target="_blank" rel="noopener noreferrer"><button class="btn btn-light btn-outline-dark" type="button">Validation</button></a>
-        </form>
-    </nav>
+    <!-- <nav class="navbar navbar-light bg-light p-2">
+        <ul>
+            <li>
+                <a href="https://github.com/KatrinaYates/form" target="_blank" rel="noopener noreferrer">My Code</a>
+            </li>
+            <li>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2FKatrinaYates%2Fform" target="_blank" rel="noopener noreferrer">Validator</a>
+            </li>
+        </ul>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="https://github.com/KatrinaYates/form">My Code</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2FKatrinaYates%2Fform">Validator</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     <!-- main section -->
     <main class="p-5">
