--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
                     <input type="file" id="myfile" name="myfile" class="form-control">
                 </div>
 
-                <!-- drop down -- This will also be the beginning of the flow control-->
+                <!-- drop down  -->
+                <!-- This will also be the beginning of the flow control -->
                 <div class="col-md-3">                
-                    <label for="holiday" class="form-label">Choose a Season:</label>
-                    <select id="holiday" name="holiday" class="form-control" required>
-                        <option selected>Open this select menu</option>
-                        <option value="halloween">Halloween</option>
-                        <option value="thanksgiving">Thanksgiving</option>
-                        <option value="christmas">Christmas</option>
-                        <option value="newYork">New Year</option>
+                    <label for="season" class="form-label">Choose a Season:</label>
+                    <select id="season" name="season" class="form-control" required>
+                        <option value="fall">Fall</option>
+                        <option value="winter">Winter</option>
+                        <option value="spring">Spring</option>
+                        <option value="summer">Summer</option>
                     </select>
                 </div>
 
                 <!-- drop downs that will be apart of the flow control! -->
+                <!-- not set as 'required' right now -->
                 <div class="col-md-3">                
                     <label for="holidayFall" class="form-label">Choose a Fall Holiday:</label>
-                    <select id="holidayFall" name="holidayFall" class="form-control" required>
-                        <option selected>Open this select menu</option>
+                    <select id="holidayFall" name="holidayFall" class="form-control">
                         <option value="halloween">Halloween</option>
                         <option value="thanksgiving">Thanksgiving</option>
                     </select>
@@ -99,8 +99,7 @@
 
                 <div class="col-md-3">                
                     <label for="holidayWinter" class="form-label">Choose a Winter Holiday:</label>
-                    <select id="holidayWinter" name="holidayWinter" class="form-control" required>
-                        <option selected>Open this select menu</option>
+                    <select id="holidayWinter" name="holidayWinter" class="form-control">
                         <option value="christmas">Christmas</option>
                         <option value="newYork">New Year</option>
                     </select>
@@ -108,8 +107,7 @@
 
                 <div class="col-md-3">                
                     <label for="holidaySpring" class="form-label">Choose a Spring Holiday:</label>
-                    <select id="holidaySpring" name="holidaySpring" class="form-control" required>
-                        <option selected>Open this select menu</option>
+                    <select id="holidaySpring" name="holidaySpring" class="form-control">
                         <option value="valentines">Valentines Day</option>
                         <option value="cincoDeMayo">Cinco De Mayo</option>
                     </select>
@@ -117,8 +115,7 @@
 
                 <div class="col-md-3">                
                     <label for="holidaySummer" class="form-label">Choose a Summer Holiday:</label>
-                    <select id="holidaySummer" name="holidaySummer" class="form-control" required>
-                        <option selected>Open this select menu</option>
+                    <select id="holidaySummer" name="holidaySummer" class="form-control">
                         <option value="memorial">Memorial Day</option>
                         <option value="independence">Independence Day</option>
                     </select>
