--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-md-3">                
                     <label for="season" class="form-label">Choose a season:</label>
                     <select id="season" name="season" class="form-control" required>
-                        <option>Click for seasons</option>                       
+                        <option value="">Click for seasons</option>                       
                         <option value="fall">Fall</option>
                         <option value="winter">Winter</option>
                         <option value="spring">Spring</option>
