--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <form class="p-3">
             <fieldset class="border p-5 row g-3 m-3">
                 <legend>About You:</legend>
-
                 
                 <!-- text entry -->
                 <div class="col-md-4">
@@ -93,6 +92,7 @@
                 <div class="col-md-3">                
                     <label for="holidayFall" class="form-label">Choose a fall holiday:</label>
                     <select id="holidayFall" name="holidayFall" class="form-control">
+                        <option value="">Click for holiday</option> 
                         <option value="halloween">Halloween</option>
                         <option value="thanksgiving">Thanksgiving</option>
                     </select>
@@ -101,6 +101,7 @@
                 <div class="col-md-3">                
                     <label for="holidayWinter" class="form-label">Choose a winter holiday:</label>
                     <select id="holidayWinter" name="holidayWinter" class="form-control">
+                        <option value="">Click for holiday</option> 
                         <option value="christmas">Christmas</option>
                         <option value="newYork">New Year</option>
                     </select>
@@ -109,6 +110,7 @@
                 <div class="col-md-3">                
                     <label for="holidaySpring" class="form-label">Choose a spring holiday:</label>
                     <select id="holidaySpring" name="holidaySpring" class="form-control">
+                        <option value="">Click for holiday</option> 
                         <option value="valentines">Valentines Day</option>
                         <option value="cincoDeMayo">Cinco De Mayo</option>
                     </select>
@@ -117,6 +119,7 @@
                 <div class="col-md-3">                
                     <label for="holidaySummer" class="form-label">Choose a summer holiday:</label>
                     <select id="holidaySummer" name="holidaySummer" class="form-control">
+                        <option value="">Click for holiday</option> 
                         <option value="memorial">Memorial Day</option>
                         <option value="independence">Independence Day</option>
                     </select>
