--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link" target="_blank" href="https://github.com/KatrinaYates/form">My Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2FKatrinaYates%2Fform">Validator</a>
+              <a class="nav-link" target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkatrinayates.github.io%2Fform%2F">Validator</a>
             </li>
           </ul>
         </div>
