--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
                 
                 <!-- text entry -->
                 <div class="col-md-4">
-                    <label for="fname" class="form-label">Name:</label>
+                    <label for="fname" class="form-label">Name:<span>*</span></label>
                     <input type="text" id="fname" name="fname" class="form-control" placeholder="Jane Doe" required autofocus>
                 </div>
 
                 <!-- text entry that requires an @ sign -->
                 <div class="col-md-4">
-                    <label for="email" class="form-label">Email:</label>
+                    <label for="email" class="form-label">Email:<span>*</span></label>
                     <input type="email" id="email" name="email" class="form-control" placeholder="jane@email.com" required>
                 </div>
 
                 <!-- text entry thats hidden -->
                 <div class="col-md-4">
-                    <label for="pwd" class="form-label">Password:</label>
+                    <label for="pwd" class="form-label">Password:<span>*</span></label>
                     <input type="password" id="pwd" name="pwd" class="form-control" placeholder="********" required>
                 </div>
 
                 <!-- text entry that requires numbers -->        
                 <div class="col-md-4">
-                    <label for="phone" class="form-label">Phone number:</label>
+                    <label for="phone" class="form-label">Phone number:<span>*</span></label>
                     <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" placeholder="123-456-7890" required>
                 </div>
 
                 <!-- date and time entry -->
                 <div class="col-md-4">
-                    <label for="birthdaytime" class="form-label">Birthday:</label>
+                    <label for="birthdaytime" class="form-label">Birthday:<span>*</span></label>
                     <input type="datetime-local" id="birthdaytime" name="birthdaytime" class="form-control form-control-sm" required>
                 </div>
 
@@ -76,8 +76,8 @@
 
                 <!-- drop down  -->
                 <!-- This will also be the beginning of the flow control -->
-                <div class="col-md-3">                
-                    <label for="season" class="form-label">Choose a season:</label>
+                <div class="col-md-12" id="allSeason">                
+                    <label for="season" class="form-label">Choose a season:<span>*</span></label>
                     <select id="season" name="season" class="form-control" required>
                         <option value="">Click for seasons</option>                       
                         <option value="fall">Fall</option>
@@ -89,7 +89,7 @@
 
                 <!-- drop downs that will be apart of the flow control! -->
                 <!-- not set as 'required' right now -->
-                <div class="col-md-3">                
+                <div class="col-md-5" id="fall">                
                     <label for="holidayFall" class="form-label">Choose a fall holiday:</label>
                     <select id="holidayFall" name="holidayFall" class="form-control">
                         <option value="">Click for holiday</option> 
@@ -98,7 +98,7 @@
                     </select>
                 </div>
 
-                <div class="col-md-3">                
+                <div class="col-md-6" id="winter">                
                     <label for="holidayWinter" class="form-label">Choose a winter holiday:</label>
                     <select id="holidayWinter" name="holidayWinter" class="form-control">
                         <option value="">Click for holiday</option> 
@@ -107,7 +107,7 @@
                     </select>
                 </div>
 
-                <div class="col-md-3">                
+                <div class="col-md-6" id="spring">                
                     <label for="holidaySpring" class="form-label">Choose a spring holiday:</label>
                     <select id="holidaySpring" name="holidaySpring" class="form-control">
                         <option value="">Click for holiday</option> 
@@ -116,7 +116,7 @@
                     </select>
                 </div>
 
-                <div class="col-md-3">                
+                <div class="col-md-6" id="summer">                
                     <label for="holidaySummer" class="form-label">Choose a summer holiday:</label>
                     <select id="holidaySummer" name="holidaySummer" class="form-control">
                         <option value="">Click for holiday</option> 
@@ -124,11 +124,12 @@
                         <option value="independence">Independence Day</option>
                     </select>
                 </div>
-
+                
+                <br>
 
                 <!-- radio -->
-                <div class="col-md-3">
-                    <label for="language" class="form-label">Choose a language:</label>
+                <div class="col-md-4">
+                    <label for="language" class="form-label">Choose a language:<span>*</span></label>
                     <div id="language" class="form-control">
                         <input type="radio" id="html" name="fav_language" value="HTML" required>
                         <label for="html">HTML</label><br>
@@ -140,8 +141,8 @@
                 </div>
 
                 <!-- checkbox -->
-                <div class="col-md-3">
-                    <label for="enjoy" class="form-label">I enjoy:</label>
+                <div class="col-md-4">
+                    <label for="enjoy" class="form-label">I enjoy:<span>*</span></label>
                     <div id="enjoy" class="form-control">
                         <input type="checkbox" id="hiking" name="hiking" value="hiking">
                         <label for="hiking"> hiking</label><br>
@@ -153,8 +154,8 @@
                 </div>
 
                 <!-- color selector -->
-                <div class="col-md-3">
-                    <label for="favcolor" class="form-label">Select your favorite color:</label>
+                <div class="col-md-4">
+                    <label for="favcolor" class="form-label">Select your favorite color:<span>*</span></label>
                     <input type="color" id="favcolor" name="favcolor" class="form-control form-control-lg">
                 </div>
 
