--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
                 <!-- radio -->
                 <div class="col-md-4">
-                    <label for="language" class="form-label">Choose a language:<span>*</span></label>
-                    <div id="languageBOX" class="form-control">
+                    <label for="languageBOX" class="form-label">Choose a language:<span>*</span></label>
+                    <div id="languageBOX" class="form-control"> 
                         <input type="radio" id="html" name="fav_language" value="HTML" required>
                         <label for="html">HTML</label><br>
                         <input type="radio" id="css" name="fav_language" value="CSS">
