--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
                 <!-- radio -->
                 <div class="col-md-4">
-                    <label for="languageBOX" class="form-label">Choose a language:<span>*</span></label>
-                    <div id="language" class="form-control"> 
-                        <input type="radio" id="languageBox" name="fav_language" value="HTML" required>
+                    <label for="language" class="form-label">Choose a language:<span>*</span></label>
+                    <div id="language" class=""> 
+                        <input type="radio" id="html" name="fav_language" value="HTML" required>
                         <label for="html">HTML</label><br>
                         <input type="radio" id="css" name="fav_language" value="CSS">
                         <label for="css">CSS</label><br>
