--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://github.com/KatrinaYates/form">My Code</a>
+              <a class="nav-link" type="button" target="_blank" href="https://github.com/KatrinaYates/form">My Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkatrinayates.github.io%2Fform%2F">Validator</a>
+              <a class="nav-link" type="button" target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkatrinayates.github.io%2Fform%2F">Validator</a>
             </li>
+            <li class="nav-item">
+                <a id="loadData" type="button" class="nav-link" target="_blank" href="">Load Data</a>
+              </li>
+
           </ul>
         </div>
       </nav>
