--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
                 <div class="col-md-4">
                     <label for="language" class="form-label">Choose a language:<span>*</span></label>
                     <div id="language" class="form-control"> 
-                        <input type="radio" id="html" name="fav_language" value="HTML" required>
+                        <input type="radio" id="html" name="language" value="html" required>
                         <label for="html">HTML</label><br>
-                        <input type="radio" id="css" name="fav_language" value="CSS">
+                        <input type="radio" id="css" name="language" value="css">
                         <label for="css">CSS</label><br>
-                        <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+                        <input type="radio" id="javascript" name="language" value="javaScript">
                         <label for="javascript">JavaScript</label>
                     </div>                    
                 </div>
@@ -145,11 +145,11 @@
                 <div class="col-md-4">
                     <label for="enjoy" class="form-label">I enjoy:<span>*</span></label>
                     <div id="enjoy" class="form-control">
-                        <input type="checkbox" id="hiking" name="hiking" value="hiking">
+                        <input type="checkbox" id="hiking" name="enjoy" value="hiking">
                         <label for="hiking"> hiking</label><br>
-                        <input type="checkbox" id="programming" name="programming" value="programming">
+                        <input type="checkbox" id="programming" name="enjoy" value="programming">
                         <label for="programming"> programming</label><br>
-                        <input type="checkbox" id="sleeping" name="sleeping" value="sleeping">
+                        <input type="checkbox" id="sleeping" name="enjoy" value="sleeping">
                         <label for="sleeping"> sleeping</label>
                     </div>                    
                 </div>
